try and fix excess horizontal spacing on mobile

--- a/style.css
+++ b/style.css
@@ -232,7 +232,7 @@ a:link.button, a:visited.button, a:hover.button, a:active.button {
     width: 500px;
     display: inline-block;
     /* Will this cause varying heights for cards? */
-    padding: 30px;
+    padding: 30px 0;
   }
 
 
@@ -358,7 +358,8 @@ a:link.button, a:visited.button, a:hover.button, a:active.button {
       }
 
       .project-card{
+        padding: 0;
         width: 90%;
-        margin: auto;
+        margin: 5%;
       }
   }
